@@ -1,6 +1,6 @@
 debug.log-request-handling   = "enable"
-debug.log-response-header   = "enable"
-debug.log-request-header   = "enable"
+debug.log-response-header   = "disable"
+debug.log-request-header   = "disable"
 
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 server.pid-file              = env.SRCDIR + "/tmp/lighttpd/lighttpd.pid"
@@ -27,4 +27,5 @@ cgi.assign = (".pl" => "/usr/bin/perl" )
 
 extforward.forwarder = (
 	"127.0.0.1" => "trust",
+	"127.0.30.1" => "trust",
 )
