@@ -8,7 +8,7 @@ BEGIN {
 
 use strict;
 use IO::Socket;
-use Test::More tests => 2;
+use Test::More tests => 5;
 use LightyTest;
 
 my $tf = LightyTest->new();
@@ -18,8 +18,6 @@ $tf->{CONFIGFILE} = 'mod-extforward.conf';
 
 ok($tf->start_proc == 0, "Starting lighttpd") or die();
 
-## check if If-Modified-Since, If-None-Match works
-
 $t->{REQUEST} = ( <<EOF
 GET /ip.pl HTTP/1.0
 Host: www.example.org
@@ -27,7 +25,7 @@ X-Forwarded-For: 127.0.10.1
 EOF
 );
 $t->{RESPONSE} = [ { 'HTTP-Protocol' => 'HTTP/1.0', 'HTTP-Status' => 200, 'HTTP-Content' => '127.0.10.1' } ];
-ok($tf->handle_http($t) == 0, 'expect 127.0.10.1');
+ok($tf->handle_http($t) == 0, 'expect 127.0.10.1, from single ip');
 
 $t->{REQUEST} = ( <<EOF
 GET /ip.pl HTTP/1.0
@@ -36,6 +34,15 @@ X-Forwarded-For: 127.0.10.1, 127.0.20.1
 EOF
 );
 $t->{RESPONSE} = [ { 'HTTP-Protocol' => 'HTTP/1.0', 'HTTP-Status' => 200, 'HTTP-Content' => '127.0.20.1' } ];
-ok($tf->handle_http($t) == 0, 'expect 127.0.20.1');
+ok($tf->handle_http($t) == 0, 'expect 127.0.20.1, from two ips');
+
+$t->{REQUEST} = ( <<EOF
+GET /ip.pl HTTP/1.0
+Host: www.example.org
+X-Forwarded-For: 127.0.10.1, 127.0.20.1, 127.0.30.1
+EOF
+);
+$t->{RESPONSE} = [ { 'HTTP-Protocol' => 'HTTP/1.0', 'HTTP-Status' => 200, 'HTTP-Content' => '127.0.20.1' } ];
+ok($tf->handle_http($t) == 0, 'expect 127.0.20.1, from chained proxies');
 
 ok($tf->stop_proc == 0, "Stopping lighttpd");
