@@ -20,6 +20,7 @@ NEWS
   * HTTPS env var should be "on" when using mod_extforward and the X-Forwarded-Proto header is set. (#1499)
   * generate ETag and Last-Modified headers for mod_ssi based on newest modified include (#1491)
   * support letterhomes in mod_userdir (#1473)
+  * support chained proxies in mod_extforward (#1528)
 
 - 1.4.18 - 2007-09-09
 
